fixed bug with looping poster video reappearing on video stop on mobile

--- a/source/scss/video.scss
+++ b/source/scss/video.scss
@@ -88,6 +88,10 @@
         }
     }
 
+    .undisplayed {
+        display: none;
+    }
+
     .hidden {
         position: absolute;
         left: -10000px;
